rdocs/src/snapshots/rdocs__parser__tests__[invalid_in_multiple_pattern].snap
---
source: rdocs-extractor/src/parser.rs
expression: "Parser::new(root_path.join(\"main.rs\").as_path(), &patterns)"
---
Err(
    PatterNotEqual {
        pattern_start: "//.START",
        pattern_end: "//.*.📖",
    },
)
