rdocs/src/snapshots/rdocs__parser__tests__can_create_content_metadata.snap
---
source: rdocs-extractor/src/parser.rs
expression: "ContentMetadata::new(\"<id: second pattern >\")"
---
Some(
    ContentMetadata {
        id: "second pattern",
    },
)
