rdocs/src/snapshots/rdocs__parser__tests__patter_not_equal.snap
---
source: rdocs-extractor/src/parser.rs
expression: "Content::new(res.join(\"test.rs\").as_path(), &patterns)"
---
Err(
    PatterNotEqual {
        pattern_start: ".*#START",
        pattern_end: ".*#END",
    },
)
